...
                                    )
                                },
                            ) {
                                Tab(
                                    selected = tab == TAB_VIDEOS,
                                    onClick = { tab = TAB_VIDEOS },
                                    text = { Text("Videos") },
                                )
                                if (vm.hasPlaylists) {
                                    Tab(
                                        selected = tab == TAB_PLAYLISTS,
                                        onClick = { tab = TAB_PLAYLISTS },
                                        text = { Text("Playlists") },
                                    )
                                }
                                Tab(
                                    selected = tab == TAB_ABOUT,
                                    onClick = { tab = TAB_ABOUT },
                                    text = { Text("About") },
...
