appId: app.librepipes
name: Playlist page and load more
---
- launchApp:
    stopApp: true
- tapOn: "Search Librepipe"
- tapOn: "Search YouTube or YouTube Music|.*kotlin full course.*"
- runFlow:
    when:
      visible: "Clear"
    commands:
      - tapOn: "Clear"
- inputText: "kotlin full course"
- pressKey: Enter
- tapOn: "Playlists"
- extendedWaitUntil:
    visible: ".*Kotlin.*"
    timeout: 25000
- tapOn:
    text: ".*Kotlin.*"
    index: 1
- extendedWaitUntil:
    visible: ".*views.*"
    timeout: 25000
- takeScreenshot: e2e/playlist_opened
- scroll
- scroll
- takeScreenshot: e2e/playlist_scrolled
